Agents copnfig update

--- a/composer.json
+++ b/composer.json
@@ -2,12 +2,12 @@
 	"name": "skeeks/cms-search",
 	"description": "Search component for SkeekS CMS",
 	"keywords": ["yii", "skeeks", "framework", "component", "search"],
-    	"homepage": "http://cms.skeeks.com/",
+    	"homepage": "https://cms.skeeks.com/",
 	"type": "yii2-extension",
 	"license": "GPL-3.0+",
 	"support": {
-        "issues": "http://skeeks.com/",
-        "wiki": "http://en.cms.skeeks.com/docs/",
+        "issues": "https://skeeks.com/",
+        "wiki": "https://cms.skeeks.com/docs/",
         "source": "https://github.com/skeeks-cms/cms-search"
     },
 	"authors": [
@@ -17,17 +17,23 @@
 		}
 	],
 	"require": {
-		"skeeks/cms": "*"
+		"skeeks/cms": "~5.0 || dev-master"
 	},
     "autoload": {
         "psr-4": {
-            "skeeks\\cms\\search\\": ""
+            "skeeks\\cms\\search\\": "src/"
         }
     },
     "extra": {
         "config-plugin": {
-            "web": "config/main.php",
-            "console": "config/main-console.php"
+            "web": [
+                "src/config/common.php",
+                "src/config/web.php"
+            ],
+            "console": [
+                "src/config/common.php",
+                "src/config/console.php"
+            ]
         }
     }
 }
