--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"keywords": ["yii", "skeeks", "framework", "component", "search"],
     	"homepage": "https://cms.skeeks.com/",
 	"type": "yii2-extension",
-	"license": "GPL-3.0+",
+	"license": "BSD-3-Clause",
 	"support": {
         "issues": "https://skeeks.com/",
         "wiki": "https://cms.skeeks.com/docs/",
@@ -17,7 +17,7 @@
 		}
 	],
 	"require": {
-		"skeeks/cms": "~5.0 || dev-master"
+		"skeeks/cms": "^5.0 || dev-master"
 	},
     "autoload": {
         "psr-4": {
